# clckwrks-theme-bootstrap

./: .travis.yml  BootstrapTheme.hs  README.md  Theme.hs  clckwrks-theme-bootstrap.cabal  default.nix  shell.nix
.github/workflows/: haskell-ci.yml
data/: style.css
data/css/: bootstrap.css  bootstrap.min.css
swatchmaker/: Makefile
swatchmaker/swatch/: bootswatch.less  variables.less
