name:                clckwrks-theme-bootstrap
version:             0.1.0
synopsis:            simple bootstrap based template for clckwrks
homepage:            http://www.clckwrks.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Clckwrks
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     BootstrapTheme
  build-depends:       base             == 4.5.*,
                       clckwrks         == 0.13.*,
                       happstack-server == 7.0.*,
                       hsp              == 0.7.*,
                       text             == 0.11.*
