name:                clckwrks-theme-bootstrap
version:             0.2.0
synopsis:            simple bootstrap based template for clckwrks
homepage:            http://www.clckwrks.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Clckwrks
build-type:          Simple
cabal-version:       >=1.8

data-files:
  data/style.css

library
  exposed-modules:     Theme
                       Paths_clckwrks_theme_bootstrap
  build-depends:       base             >  4 && <5,
                       clckwrks         == 0.13.*,
                       happstack-server == 7.0.*,
                       hsp              == 0.7.*,
                       text             == 0.11.*
